# drugRAG

./: .gitignore  EVALUATION_RESULTS_BINARY.md  README.md  llama.sh  main.py  pinecone_responses_20250921_001104.json  pinecone_responses_20250921_001927.json  pinecone_responses_20250921_001945.json  pyproject.toml  quick_start.sh  qwen.sh  run_evaluations.sh
data/processed/: class_queries.csv  complex_query_dataset.csv  comprehensive_combination_queries.csv  comprehensive_comparison_queries.csv  comprehensive_contraindication_queries.csv  comprehensive_graphrag_queries.csv  comprehensive_mechanistic_queries.csv  comprehensive_organ_queries.csv  comprehensive_severity_queries.csv  drug_class_queries.csv  evaluation_dataset.csv  organ_based_query_dataset.csv  organ_specific_queries.csv  organ_system_queries.csv  reverse_ground_truth.json
experiments/: batch_evaluation_results_20250920_222802.json  batch_evaluation_results_20250920_222808.json  batch_evaluation_results_20250920_222815.json  batch_evaluation_results_20250920_232158.json  evaluate_complex_queries.py  evaluate_complex_queries_batch.py  evaluate_complex_queries_ultrafast.py  evaluate_enhanced_complex_queries.py  evaluate_vllm.py  results_complex_drug_comparison_enhanced_format_b_qwen.json  results_complex_organ_specific_enhanced_format_b_qwen.json  results_complex_severity_filtered_enhanced_format_b_qwen.json  results_vllm_format_a_llama3_19520_20250920_170647.json  results_vllm_format_a_qwen_19520_20250919_202004.json  results_vllm_format_b_llama3_19520_20250920_181110.json  results_vllm_format_b_qwen_19520_20250920_024010.json  results_vllm_graphrag_llama3_19520_20250920_201308.json  results_vllm_graphrag_qwen_19520_20250920_003408.json  results_vllm_pure_llm_llama3_19520_20250920_145541.json  results_vllm_pure_llm_qwen_19520_20250919_181230.json  test_batch_processing.py  test_enhanced.json  test_enhanced_format_b.json  test_ultrafast_complex.py  ultra_fast_results_20250920_232542.json
processed/: class_based_query_dataset.csv  class_ground_truth.json  comprehensive_metadata_evaluation.csv  comprehensive_temporal_queries.csv  confidence_threshold_queries.csv  data_format_a.csv  dataset_statistics copy.txt  drug_names.csv  graphrag_relationship_queries.csv  metadata_aware_evaluation.csv  organ_ground_truth.json  reverse_queries.csv  reverse_query_dataset.csv  severity_filtered_queries.csv  side_effects.csv
src/: __init__.py
src/architectures/: __init__.py  advanced_rag_format_b.py  enhanced_graphrag.py  enhanced_rag_format_b.py  graphrag.py  rag_format_a.py  rag_format_b.py
src/evaluation/: __init__.py  advanced_metrics.py  metrics.py
src/utils/: __init__.py  batch_processor.py  binary_parser.py  data_processor.py  database.py  embedding_client.py  query_understanding.py  token_manager.py
